--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,13 @@
     <script src="script.js"></script>
     <title>MyPortfolio :3</title>
 </head>
+
 <body>
     <div align="center" class="header">
         <h1>Hello, World!</h1>
-        <marquee width="50%"><h3>Welcome To My Developer Portfolio :3</h3></marquee>
+        <marquee width="50%">
+            <h3>Welcome To My Developer Portfolio :3</h3>
+        </marquee>
         <hr width="50%">
         <h5>
             <q>An idiot admires complexity, a genius admires simplicity</q>
@@ -21,19 +25,27 @@
     <div class="main">
         <div>
             <h2>About Me:</h2>
-            <p>Hello, I'm Pedro Fröhlich, a Brazilian developer, and yes, the Terry Davis quotation was meant to justify the simplicity of this website, and also, beauty is found in many other things, open your mind for us low level programmers, we find design and graphics difficult. :(</p>
-            <p>Going for low level development, mainly with C/C++, sometimes assembly (just when needed, i ain't no pro in assembly)</p>
-            <p>If you want to take a look, here is my github: <a href="https://github.com/frohlich-pedro">Click Me!</a> :)</p>
+            <p>Hello, I'm Pedro Fröhlich, a Brazilian developer, and yes, the Terry Davis quotation was meant to justify
+                the simplicity of this website, and also, beauty is found in many other things, open your mind for us
+                low level programmers, we find design and graphics difficult. :(</p>
+            <p>Going for low level development, mainly with C/C++, sometimes assembly (just when needed, i ain't no pro
+                in assembly)</p>
+            <p>If you want to take a look, here is my github: <a href="https://github.com/frohlich-pedro">Click Me!</a>
+                :)</p>
             <hr>
         </div>
         <div>
             <h2>My Achievements:</h2>
-            <p>I completed a course by Dr. Frank Mitropoulos on the C++ programing language, in which i learned not only language specific things, but also, logic, algorithms, and data structures.</p>
-            <img src="" alt="">
+            <p>I completed a course by Dr. Frank Mitropoulos on the C++ programing language, in which i learned not only
+                language specific things, but also, logic, algorithms, and data structures.</p>
             <br>
-            <p></p>
+            <p>A 40 hour course on Fundamentals of Electronics, by SENAI (Serviço Nacional da Indústria)</p>
+            <br>
+            <p>A 20 hour course on Connectivity and Internet of Things (IoT), also by SENAI</p>
+            <br>
             <hr>
         </div>
     </div>
 </body>
+
 </html>
