--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,14 @@
     <div class="main">
         <div>
             <h2>About Me:</h2>
-            <p>Hello, I'm Pedro Fröhlich, a Brazilian developer, and yes, the Terry Davis quotation was meant to justify
+            <p>Hello, I'm Pedro Fröhlich, a Brazilian developer, emoticons lover, and yes, the Terry Davis quotation was
+                meant to justify
                 the simplicity of this website, and also, beauty is found in many other things, open your mind for us
                 low level programmers, we find design and graphics difficult. :(</p>
             <p>Going for low level development, mainly with C/C++, sometimes assembly (just when needed, i ain't no pro
                 in assembly)</p>
             <p>If you want to take a look, here is my github: <a href="https://github.com/frohlich-pedro">Click Me!</a>
-                :)</p>
+                (spoiler: there is a kernel under development there ;))</p>
             <hr>
         </div>
         <div>
