update - melhor assim

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="styles/styles.css">
     <title>MyPortfolio :3</title>
 </head>
 
@@ -29,22 +28,17 @@
                 meant to justify
                 the simplicity of this website, and also, beauty is found in many other things, open your mind for us
                 low level programmers, we find design and graphics difficult. :(</p>
-            <p>Going for low level development, mainly with C/C++, sometimes assembly (just when needed, i ain't no pro
-                in assembly)</p>
+            <p>Going for low level development, mainly with C, sometimes assembly</p>
+            <br>
             <p>If you want to take a look, here is my github: <a href="https://github.com/frohlich-pedro">Click Me!</a>
-                (spoiler: there is a kernel under development there ;))</p>
             <hr>
         </div>
         <div>
-            <h2>My Achievements:</h2>
-            <p>I completed a course by Dr. Frank Mitropoulos on the C++ programing language, in which i learned not only
-                language specific things, but also, logic, algorithms, and data structures.</p>
+            <h2>Some Projects:</h2>
+            <h3>My Own x86 OS:</h3>
+            <p>named after my dead cat, AuroraOS is a simple x86 OS, everything is made from scratch, from the bootloader to the shell. :)</p>
+            <img src="assets/image.png" alt="" width="640" height="360">
             <br>
-            <p>A 40 hour course on Fundamentals of Electronics, by SENAI (Serviço Nacional da Indústria)</p>
-            <br>
-            <p>A 20 hour course on Connectivity and Internet of Things (IoT), also by SENAI</p>
-            <br>
-            <hr>
         </div>
     </div>
 </body>
