--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <div class="main">
         <div>
             <h2>About Me:</h2>
-            <p>Hello, I'm Pedro Fröhlich, a Brazilian developer, emoticons lover, and yes, the Terry Davis quotation was
+            <p>Hello, I'm Pedro Fröhlich, developer, emoticons lover, and yes, the Terry Davis quotation was
                 meant to justify
                 the simplicity of this website, and also, beauty is found in many other things, open your mind for us
                 low level programmers, we find design and graphics difficult. :(</p>
-            <p>Going for low level development, mainly with C, sometimes assembly</p>
+            <p>Going for low level development, mainly with C, sometimes assembly >:)</p>
             <br>
-            <p>If you want to take a look, here is my github: <a href="https://github.com/frohlich-pedro">Click Me!</a>
+            <p>If you want to take a look, here is my github: <h3><a href="https://github.com/frohlich-pedro">Click Me!</a></h3></p>
             <hr>
         </div>
         <div>
