--- a/index.html
+++ b/index.html
@@ -37,7 +37,15 @@
             <h2>Some Projects:</h2>
             <h3>My Own x86 OS:</h3>
             <p>named after my dead cat, AuroraOS is a simple x86 OS, everything is made from scratch, from the bootloader to the shell. :)</p>
-            <img src="assets/image.png" alt="" width="640" height="360">
+            <br>
+            <h3>Pong in SDL-2:</h3>
+            <p>I've made a pong clone, nothing so different until you see that it SUPPORTS CONTROLERS (i've only tested with xbox, but you can try with others if i'm not mistaken) :3</p>
+            <br>
+            <h3>Assembly Calculator:</h3>
+            <p>Sometimes you just get bored, then you start learning assembly (x86_64), and then a little flame sparkles: "I can make a calculator!", and then BOOM, x86_64 assembly calculator</p>
+            <br>
+            <h3>Quick Reminder:</h3>
+            <p>All of these are in my github, so if you want to see and test them, just go there and take a look, the link is at the top of this humble portfolio. :)</p>
             <br>
         </div>
     </div>
