--- a/index.html
+++ b/index.html
@@ -30,22 +30,28 @@
                 low level programmers, we find design and graphics difficult. :(</p>
             <p>Going for low level development, mainly with C, sometimes assembly >:)</p>
             <br>
-            <p>If you want to take a look, here is my github: <h3><a href="https://github.com/frohlich-pedro">Click Me!</a></h3></p>
+            <p>If you want to take a look, here is my github:
+            <h3><a href="https://github.com/frohlich-pedro">Click Me!</a></h3>
+            </p>
             <hr>
         </div>
         <div>
             <h2>Some Projects:</h2>
             <h3>My Own x86_64 OS:</h3>
-            <p>named after my dead cat, AuroraOS is a simple x86_64 OS, everything is made from scratch, from the bootloader to the shell. :)</p>
+            <p>named after my dead cat, AuroraOS is a simple x86_64 OS, everything is made from scratch, from the
+                bootloader to the shell. :)</p>
             <br>
             <h3>Pong in SDL-2:</h3>
-            <p>I've made a pong clone, nothing so different until you see that it SUPPORTS CONTROLERS (i've only tested with xbox, but you can try with others if i'm not mistaken) :3</p>
+            <p>I've made a pong clone, nothing so different until you see that it SUPPORTS CONTROLERS (i've only tested
+                with xbox, but you can try with others if i'm not mistaken) :3</p>
             <br>
             <h3>x86_64 Calculator:</h3>
-            <p>Sometimes you just get bored, then you start learning assembly (x86_64), and then a little flame sparkles: "I can make a calculator!", and then BOOM, x86_64 assembly calculator</p>
+            <p>Sometimes you just get bored, then you start learning assembly (x86_64), and then a little flame
+                sparkles: "I can make a calculator!", and then BOOM, x86_64 assembly calculator</p>
             <br>
             <h3>Quick Reminder:</h3>
-            <p>All of these are in my github, so if you want to see and test them, just go there and take a look, the link is at the top of this humble portfolio. :)</p>
+            <p>All of these are in my github, so if you want to see and test them, just go there and take a look, the
+                link is at the top of this humble portfolio. :)</p>
             <br>
         </div>
     </div>
